--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Executando Action JS"
+        id: action-js
         uses: fspelling/action-js@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           issue-id: ${{ github.event.issue.number }}
           comment: "Comentario adicionado na pipe"
+      - name: "Exibindo output comentario"
+        run: echo "id comentario=${{ steps.action-js.outputs.comentario-id }}"
