Update GitHub Actions workflow for comments

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,10 @@ jobs:
     steps:
       - name: "Executando Action JS"
         id: action-composite
-        uses: fspelling/action-docker@main # <--
+        uses: fspelling/action-docker@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           issue-id: ${{ github.event.issue.number }}
           comment: "Comentario adicionado na pipe"
-          GITHUB_REPOSITORY: ${{ github.repository }}
       - name: "Exibindo output comentario"
         run: echo "id comentario=${{ steps.action-composite.outputs.comment-id }}"
